# moveit_core

./: CMakeLists.txt  README.md  Readme.md  get_necessary.sh
collision_detection_bullet3/: CMakeLists.txt
collision_detection_bullet3/cmake_modules/: FindBullet3.cmake
collision_detection_bullet3/include/moveit/collision_detection_bullet3/: collision_common.h  collision_detector_allocator_bullet3.h  collision_robot_bullet3.h  collision_world_bullet3.h
collision_detection_bullet3/include/moveit/collision_detection_bullet3/CollisionDetectionManager/: b3GpuCollisionDetectionManager.h  b3GpuCollisionDetectionManagerInternalData.h
collision_detection_bullet3/src/: collision_common.cpp  collision_robot_bullet3.cpp  collision_world_bullet3.cpp
collision_detection_bullet3/src/CollisionDetectionManager/: b3GpuCollisionDetectionManager.cpp  main.cpp
collision_detection_bullet3/test/: test_bullet3_collision_detection.cpp
planning_scene/src/: planning_scene.cpp
